--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,6 @@ server.servlet.contextPath=/backup
 security.user.name=user
 #security.user.password=password
 security.basic.enabled=true
+backup.ftp.hostname=192.168.99.1
+backup.ftp.user=SahaiAbhi
+backup.ftp.password=Abhi2207
