code changes for files upload to raspberry pi

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,18 @@ server.servlet.contextPath=/backup
 security.user.name=user
 #security.user.password=password
 security.basic.enabled=true
-backup.ftp.hostname=192.168.99.1
+backup.ftp.hostname=192.168.1.66          
+#192.168.99.1
 backup.ftp.user=SahaiAbhi
 backup.ftp.password=Abhi2207
+backup.ftp.sourceDir=H1b 2019
+backup.ftp.destDir=delete
+# Enabling H2 Console
+spring.h2.console.enabled=true
+spring.datasource.initialization-mode=always
+spring.jpa.hibernate.ddl-auto=none
+spring.h2.console.path=/h2-console
+#path to console = http://localhost:9098/backup/h2-console/
+###mail configurations
+mail.username=SahaiAbhi@gmail.com
+mail.password=6L040pr+FHLltHdm6DauJsI49Q7RapCwqrB0ym/yqwc=
