Code changes for raspberry pi

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,3 +19,5 @@ spring.h2.console.path=/h2-console
 mail.host=smtp.gmail.com
 mail.username=sahaiabhi@gmail.com
 mail.password=6L040pr+FHLltHdm6DauJsI49Q7RapCwqrB0ym/yqwc=
+local.folder=/media/pi/528E1972665B1382/My_backItUp_App
+google.folder=1EMvxLfzgIbN5da73S9_qWFINXVo-kFVO
