--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,7 +8,7 @@ backup.ftp.hostname=192.168.1.66
 backup.ftp.user=SahaiAbhi
 backup.ftp.password=Abhi2207
 backup.ftp.sourceDir=H1b 2019
-backup.ftp.destDir=delete
+#backup.ftp.destDir=delete
 # Enabling H2 Console
 spring.h2.console.enabled=true
 spring.datasource.initialization-mode=always
