--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,13 +8,24 @@ backup.ftp.hostname=192.168.1.66
 backup.ftp.user=SahaiAbhi
 backup.ftp.password=Abhi2207
 backup.ftp.sourceDir=H1b 2019
-#backup.ftp.destDir=delete
+
 # Enabling H2 Console
-spring.h2.console.enabled=true
-spring.datasource.initialization-mode=always
-spring.jpa.hibernate.ddl-auto=none
-spring.h2.console.path=/h2-console
+#spring.h2.console.enabled=true
+#spring.datasource.initialization-mode=always
+#spring.jpa.hibernate.ddl-auto=none
+#spring.h2.console.path=/h2-console
 #path to console = http://localhost:9098/backup/h2-console/
+
+#############postgresql properties
+spring.datasource.url=jdbc:postgresql://192.168.1.75:5432/cooking
+spring.datasource.username=abhi
+spring.datasource.password=Abhi2207
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+spring.jpa.hibernate.ddl-auto = update
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
+
 ###mail configurations
 mail.host=smtp.gmail.com
 mail.username=sahaiabhi@gmail.com
